# Astroray

./: .clinerules.md  .editorconfig  .gitignore  AGENTS.md  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CustomRaytracer.sln  Extensive_testing_notebook.py  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  PRD.md  PRD_render_bugs.md  README.md  THIRD_PARTY.md  Testing_python_package-S-5CG52530L0.ipynb  Testing_python_package.ipynb  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  astroray.pyd  cmake_install.cmake  output.ppm  ralph_loop.sh  raytracer_standalone.vcxproj  raytracer_standalone.vcxproj.filters  requirements.txt
.astroray_plan/: README.md
.astroray_plan/agents/: claude-code.md  cline.md  codex.md  copilot-cloud.md  copilot-instructions.md  copilot-setup-steps.yml  overseer.md  ralph-loop.md
.astroray_plan/docs/: NEXT_STAGE_REPORT.md  ROADMAP.md  STATUS.md  astrophysics.md  external-references.md  light-transport.md  local-agent-integration.md  nrc-prototype-notes.md  plugin-architecture.md  production.md  restir-temporal-spatial-design.md  spectral-core.md  tiny-cuda-nn-prototype-notes.md
.astroray_plan/scripts/: bootstrap.sh  ralph_loop.sh  ralph_queue.txt
.beads/: metadata.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
apps/: main.cpp
blender_addon/: Test_scene.blend  Test_scene.blend1  __init__.py  blender_manifest.toml  raytracer_blender.cp311-win_amd64.pyd
build_cuda/: Makefile  build2.bat  build_msvc.bat  do_build.bat
data/spectra/: cie_cmf.inc  illuminant_d65.inc
data/spectral_profiles/: profiles_metadata.json  sources.md
docs/: BEADS_WORKFLOW.md  BLENDER_51_PLAN.md  CUDA_IMPLEMENTATION_PLAN.md  GR_INTEGRATION_PLAN.md  PRD.md  PRD_render_bugs.md  QUICKSTART.md  README.md  REPO_CLEANUP.md
docs/adr/: CUDA_DESIGN.md  GR_DESIGN.md  HDRI_DESIGN.md  HDRI_IMPLEMENTATION_PLAN.md
docs/agent-context/: lessons-learned.md  renderer-internals.md
include/: advanced_features.h  blender_integration.h  raytracer.h  stb_image_write_impl.c
include/astroray/: README.md  accretion_disk.h  black_hole.h  gpu_bvh.h  gpu_materials.h  gpu_renderer.h  gpu_scene_upload.h  gpu_types.h  gr_integrator.h  gr_types.h  integrator.h  material_closure.h  metric.h  optical_presets.h  param_dict.h  pass.h  register.h  registry.h  shapes.h  spectral.h  spectral_profile.h  spectrum.h
include/astroray/restir/: frame_state.h  light_sample.h  reservoir.h
module/: blender_module.cpp
notebooks/: Extensive_testing_notebook.py
plugins/integrators/: ambient_occlusion.cpp  caustic_path_tracer.cpp  multiwavelength_path_tracer.cpp  neural_cache.cpp  path_tracer.cpp  restir_di.cpp  spectral_path_tracer.cpp
plugins/materials/: blackbody.cpp  closure_matte.cpp  dielectric.cpp  diffuse_light.cpp  disney.cpp  emissive.cpp  isotropic.cpp  lambertian.cpp  line_emitter.cpp  metal.cpp  mirror.cpp  normal_mapped.cpp  oren_nayar.cpp  phong.cpp  subsurface.cpp  thin_glass.cpp  two_sided.cpp
plugins/passes/: albedo_aov.cpp  bounce_heatmap.cpp  colourmap_output.cpp  depth_aov.cpp  normal_aov.cpp  oidn_denoiser.cpp  sample_heatmap.cpp
plugins/shapes/: black_hole.cpp  constant_medium.cpp  mesh.cpp  sphere.cpp  triangle.cpp
plugins/textures/: brick.cpp  checker.cpp  gradient.cpp  image.cpp  magic.cpp  musgrave.cpp  noise.cpp  voronoi.cpp  wave.cpp
raytracer_standalone.dir/Release/raytrace.9FC82389.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  raytracer_standalone.lastbuildstate
scripts/: README.md  autonomous_loop.sh  benchmark_caustic_transport.py  benchmark_light_transport.py  benchmark_showcase.py  build_blender_addon.py  build_cuda.bat  build_spectral_profiles.py  convergence_tracker.py  create_cycles_parity_issues.sh  generate_spectrum_data.py  material_contact_sheet.py  nrc_smoke_render.cu  oidn_comparison.py  prioritize_issues.sh  render_output_triage.py  render_test_scene.py  simple_cuda_smoke.cu  spectral_profile_format.md  start_local_agent_server.sh  test_blender_addon.py  tiny_cuda_nn_smoke.cu
src/: blender_module.cpp  default_integrator.cpp  main.cpp  material_closure.cpp  neural_cache.cu  neural_cache.h  spectral_profile.cpp  spectrum.cpp  stb_image_write_impl.c
src/gpu/: cuda_renderer.cu  path_trace_kernel.cu  scene_upload.cu
tests/: __init__.py  base_helpers.py  conftest.py  restir_helpers.py  run_all_tests.py  runtime_setup.py  test_aov_passes.py  test_blender_backend_policy.py  test_blender_view_layers.py  test_caustic_validation.py  test_integrator_plugin.py  test_lambertian_plugin.py  test_material_backend_capabilities.py  test_material_closure_graph.py  test_material_plugins.py  test_material_properties.py  test_multiwavelength.py  test_neural_cache_validation.py  test_oidn_denoiser.py  test_optical_glass_materials.py  test_pass_plugins.py  test_physics_emitters.py  test_python_bindings.py  test_registry.py  test_restir_initial_sampling.py  test_restir_light_sample.py  test_restir_reservoir.py  test_restir_reuse_design.py  test_restir_validation.py  test_rough_glass.py  test_shape_plugins.py  test_spectral_envmap.py  test_spectral_gpu_materials.py  test_spectral_lambertian.py  test_spectral_materials.py  test_spectral_path_tracer.py  test_spectral_prism.py  test_spectral_profiles.py  test_spectral_textures.py  test_spectrum.py  (+2 more)
tests/data/: spectrum_reference.json
tests/scenes/: __init__.py  caustic_validation.py  ir_photography.py  neural_cache_indirect.py  prism_reference.py  uv_render.py
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
